# aegis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
bandit/: context.py  linucb.py  simulator.py
bandit/notebooks/: online_episodes.jsonl
bandit/tests/: test_linucb.py
docs/: architecture.md  backlog.md  build-log.md  cost-model.md  demo-script.md  extraction-benchmark.md  governance.md  resume-bullets-DRAFT.md
docs/decisions/: 001-serverless.md  002-faiss-over-opensearch.md  003-apigw-over-function-urls.md  004-bandit-reward-design.md
evals/: run_adversarial.py  run_eval.py  run_extraction_bench.py  scorecard.json  thresholds.yaml
evals/golden/: adversarial_results.json  extraction_results.json  redaction.py
frontend/: index.html
infra/bootstrap/: main.tf
knowledge/docs/: accounts-fees-chequing.md  accounts-statements-documents.md  app-notifications.md  app-troubleshooting-crashes.md  auth-2fa-setup.md  auth-login-troubleshooting.md  cards-limits-pin.md  cards-lost-stolen.md  mortgage-payments.md  payments-etransfer-limits.md  payments-failed-declined.md  release-notes-8-3.md  savings-interest-gic.md  security-fraud-reporting.md  security-privacy-data.md  wires-international.md
knowledge/golden/: retrieval.jsonl
knowledge/scripts/: acceptance.py  build_index.py  load_test.py  online_episodes.py  seed_kb.py
shared/: pyproject.toml
shared/aegis_core/: __init__.py  config.py  models.py  store.py  tracing.py
shared/tests/: test_models.py  test_store.py  test_tracing.py
(+37 files in other folders)
