[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-core"
version = "0.1.0"
description = "Shared contracts, tracing, and config for AEGIS services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "boto3>=1.34",
    "moto[dynamodb,sqs]>=5",
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["aegis_core*"]
